--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title> Star Wars with jQuery </title>
+	<title> Star Wars </title>
 	<link href="assets/css/reset.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class = "jumbotron">
-	<h1> Star Wars </h1>
+	<h1> STAR WARS </h1>
 	</div>
 	<div class = "charlist row centered">
 	 	<div id="obi"  class= "col-md-2 toChoose">
@@ -46,6 +46,7 @@
 			<p class = "attack-info"> </p>
 			<p class = "counter-attack-info"> </p>
 		</div>
+
 		<div class = "toFight col-md-3">
 		</div>
 	</div>
